UPDATE migración de proyecto a parser

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,2 +1,18 @@
-@import './common';
-@import './example';
+@import './variables';
+
+// base
+@import './base';
+@import './modal';
+@import './buttons';
+@import './titles';
+@import './main__svgs';
+
+// index
+@import './header';
+@import './hero';
+@import './sensation';
+@import './products';
+@import './sellers';
+@import './reviews';
+@import './subscribe';
+@import './footer';
