--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,12 +1,12 @@
 <div class="container">
-  <ul class="">
+  <ul class="list">
     <li class="footer__text">
       <p class="chocolate__phrase">
         <span class="first__letter">Chocolate</span> a delicious cure for a bad
         day
       </p>
     </li>
-    <ul class="contact__dimention">
+    <ul class="contact__dimention list">
       <li class="contact__space">
         <p>
           Contact us
@@ -20,17 +20,17 @@
           </li>
         </p>
       </li>
-      <li class="link__block">
+      <li class="">
         <a class="link__first" href="tel:+380684439426">+38 (06) 84439426</a>
       </li>
-      <li class="link__block">
+      <li class="">
         <a class="link__second" href="mailto:simplychoc@gmail.com"
           >simplychoc@gmail.com</a
         >
       </li>
     </ul>
   </ul>
-  <ul class="menu">
+  <ul class="menu list">
     <a class="menu__link" href="#">Home</a>
     <a class="menu__link" href="#">How it's made</a>
     <a class="menu__link" href="#">Our product</a>
