--- a/src/partials/sensation.html
+++ b/src/partials/sensation.html
@@ -1,39 +1,128 @@
-<section id="sensation" class="container sensation">
-  <h3 class="sensation__title">
-    IT ALL ADDS UP TO ONE EXCEPTIONAL <span class="taste">TASTE</span> SENSATION
-  </h3>
-  <p class="sensation__text">
-    At Simply Chocolate, we believe that the secret to exceptional chocolate is
-    in the details. From the sourcing of the finest ingredients to the careful
-    crafting of each individual piece, every step of our process adds up to one
-    exceptional taste sensation.
-  </p>
-  <ul class="card">
-    <li class="card__list">
-      <img
-        src="./images/milkchocolate.png"
-        width="206"
-        height="160"
-        alt="milkchocolate"
-      />
-      <p class="card__text">MILK CHOCOLATE</p>
-    </li>
-    <li class="card__list card__list--color">
-      <img src="./images/milk.jpg" width="206" height="160" alt="milk" />
-      <p class="card__text">MILK</p>
-    </li>
-    <li class="card__list card__list--colors">
-      <img src="./images/nuts.png" width="206" height="160" alt="nuts" />
-      <p class="card__text">NUTS</p>
-    </li>
-    <li class="card__list card__list--color">
-      <img
-        src="./images/sweetchocolate.jpg"
-        width="206"
-        height="160"
-        alt="sweetchocolate"
-      />
-      <p class="card__text">SEMI - SWEET CHOCOLATE</p>
-    </li>
-  </ul>
+<section>
+  <div class="sensation container">
+    <h3 class="sensation__title">
+      IT ALL ADDS UP TO ONE EXCEPTIONAL
+      <span class="taste">TASTE</span> SENSATION
+    </h3>
+    <p class="sensation__text">
+      At Simply Chocolate, we believe that the secret to exceptional chocolate
+      is in the details. From the sourcing of the finest ingredients to the
+      careful crafting of each individual piece, every step of our process adds
+      up to one exceptional taste sensation.
+    </p>
+    <ul class="card__list list">
+      <li class="card__container">
+        <div class="card__item card__item--accent">
+          <img
+            class="card__img"
+            src="./images/milkchocolate.png"
+            width="224"
+            height="171"
+            alt="milkchocolate"
+          />
+          <p class="card__text">MILK CHOCOLATE</p>
+        </div>
+        <div class="info__card card__item card__item--info">
+          <h3 class="info__title">MILK CHOCOLATE</h3>
+          <div class="info__btns">
+            <button class="info__btn" type="button">chocolate</button>
+            <button class="info__btn info__btn--second" type="button">
+              the benefits
+            </button>
+          </div>
+          <p class="info__text">
+            Milk chocolate is a solid chocolate confectionery containing cocoa,
+            sugar and milk. It is the most consumed type of chocolate. Chocolate
+            was originally sold and consumed as a beverage in pre-Columbian
+            times. Although four-fifths of all milk chocolate is sold in the
+            United States and Europe.
+          </p>
+        </div>
+      </li>
+      <li class="card__container">
+        <div class="card__item card__item--white">
+          <img
+            class="card__img"
+            src="./images/milk.jpg"
+            width="224"
+            height="171"
+            alt="milk"
+          />
+          <p class="card__text">MILK</p>
+        </div>
+        <div class="info__card card__item card__item--info">
+          <h3 class="info__title">MILK</h3>
+          <div class="info__btns">
+            <button class="info__btn" type="button">milk</button>
+            <button class="info__btn info__btn--second" type="button">
+              the benefits
+            </button>
+          </div>
+          <p class="info__text">
+            Milk is a white liquid food produced by the mammary glands of
+            mammals. It is the primary source of nutrition for young mammals
+            (including breastfed human infants) before they are able to digest
+            solid food.Early-lactation milk, which is called colostrum, contains
+            antibodies that strengthen the immune system.
+          </p>
+        </div>
+      </li>
+      <li class="card__container">
+        <div class="card__item card__item--black">
+          <img
+            class="card__img"
+            src="./images/nuts.png"
+            width="224"
+            height="171"
+            alt="nuts"
+          />
+          <p class="card__text">NUTS</p>
+        </div>
+        <div class="info__card card__item card__item--info">
+          <h3 class="info__title">nuts</h3>
+          <div class="info__btns">
+            <button class="info__btn" type="button">nuts</button>
+            <button class="info__btn info__btn--second" type="button">
+              the benefits
+            </button>
+          </div>
+          <p class="info__text">
+            Almonds, pistachios, and walnuts are some types of nuts that contain
+            healthy nutrients. When eaten as part of a nutrient-dense diet,
+            these 9 nuts may offer benefits such as reducing your risk of heart
+            disease. They’re a good source of fiber, healthy fats, and plant
+            protein. Plus, they’re great on their own.
+          </p>
+        </div>
+      </li>
+      <li class="card__container">
+        <div class="card__item card__item--white">
+          <img
+            class="card__img"
+            src="./images/sweetchocolate.jpg"
+            width="224"
+            height="171"
+            alt="sweetchocolate"
+          />
+          <p class="card__text">SEMI - SWEET CHOCOLATE</p>
+        </div>
+        <div class="info__card card__item card__item--info">
+          <h3 class="info__title">semi - sweet chocolate</h3>
+          <div class="info__btns">
+            <button class="info__btn" type="button">sweet chocolate</button>
+            <button class="info__btn info__btn--second" type="button">
+              the benefits
+            </button>
+          </div>
+          <p class="info__text">
+            Semi-sweet chocolate has a cocoa solid content of 35 to 65%. One of
+            the best ways to gain an understanding of this type of chocolate is
+            to compare it to a different type of chocolate. Semisweet is darker
+            than milk chocolate. In a taste comparison, it has a slightly bitter
+            taste whereas milk chocolate is sweeter.
+          </p>
+        </div>
+      </li>
+    </ul>
+  </div>
 </section>
