--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -6,8 +6,8 @@
         class="modal__btn modal__btn--subs-modal-close"
         data-modal-subs-close
       >
-        <svg class="svg-close-modal">
-          <use href="./images/symbol-defs.svg#icon-x-close-white"></use>
+        <svg class="svg-close-modal svg-close-modal--white">
+          <use href="./images/symbol-defs.svg#icon-x-close"></use>
         </svg>
       </button>
     </div>
