--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -42,7 +42,10 @@
 .svg-close-modal {
   width: 24px;
   height: 24px;
-  fill: $black;
+  stroke: $black;
+  &--white {
+    stroke: $white;
+  }
   @media screen and (min-width: 768px) {
     width: 40px;
     height: 40px;
