Benefits section finished

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -5,11 +5,11 @@
 @import './modal';
 @import './buttons';
 @import './titles';
-@import './main__svgs';
 
 // index
 @import './header';
 @import './hero';
+@import './benefits';
 @import './sensation';
 @import './products';
 @import './sellers';
