Se ajustaron estilos de la seccion sensations

--- a/src/partials/sensation.html
+++ b/src/partials/sensation.html
@@ -1,8 +1,8 @@
-<section>
-  <div class="sensation container">
-    <h3 class="sensation__title">
+<section class="sensation section">
+  <div class="sensation__container container">
+    <h3 class="section__title sensation__title">
       IT ALL ADDS UP TO ONE EXCEPTIONAL
-      <span class="taste">TASTE</span> SENSATION
+      <span class="section__title--accent">TASTE</span> SENSATION
     </h3>
     <p class="sensation__text">
       At Simply Chocolate, we believe that the secret to exceptional chocolate
@@ -22,7 +22,7 @@
           />
           <p class="card__text">MILK CHOCOLATE</p>
         </div>
-        <div class="info__card card__item card__item--info">
+        <div class="info__card card__item--info">
           <h3 class="info__title">MILK CHOCOLATE</h3>
           <div class="info__btns">
             <button class="info__btn" type="button">chocolate</button>
@@ -50,7 +50,7 @@
           />
           <p class="card__text">MILK</p>
         </div>
-        <div class="info__card card__item card__item--info">
+        <div class="info__card card__item--info">
           <h3 class="info__title">MILK</h3>
           <div class="info__btns">
             <button class="info__btn" type="button">milk</button>
@@ -78,7 +78,7 @@
           />
           <p class="card__text">NUTS</p>
         </div>
-        <div class="info__card card__item card__item--info">
+        <div class="info__card card__item--info">
           <h3 class="info__title">nuts</h3>
           <div class="info__btns">
             <button class="info__btn" type="button">nuts</button>
@@ -106,7 +106,7 @@
           />
           <p class="card__text">SEMI - SWEET CHOCOLATE</p>
         </div>
-        <div class="info__card card__item card__item--info">
+        <div class="info__card card__item--info">
           <h3 class="info__title">semi - sweet chocolate</h3>
           <div class="info__btns">
             <button class="info__btn" type="button">sweet chocolate</button>
