--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -39,5 +39,13 @@ img {
 }
 
 .section {
-  margin: 0 auto 128px;
+  margin: 72px 0;
+
+  @media screen and (min-width: 768px) {
+    margin: 100px 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin: 128px 0;
+  }
 }
