--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,17 +1,24 @@
-<section class="products">
+<section class="products section">
   <div class="container">
-    <h3 class="sellers__title title--margin">
-      <span class="sellers__title--black">OUR </span>PRODUCTS
+    <h3 class="section__title products__title">
+      OUR <span class="section__title--accent">PRODUCTS</span>
     </h3>
-    <ul class="products-list list">
+    <ul class="products__list list">
       <li class="products__item item">
-        <img src="./images/orange.jpg" width="230" height="201" alt="orange" />
+        <img
+          class="item__img"
+          src="./images/orange.jpg"
+          width="230"
+          height="201"
+          alt="orange"
+        />
         <h3 class="item__name">ORANGE</h3>
         <p class="item__type">Dark chocolate</p>
         <p class="item__price">45 UAH</p>
       </li>
       <li class="products__item">
         <img
+          class="item__img"
           src="./images/appleandcranberry.jpg"
           width="230"
           height="201"
@@ -23,6 +30,7 @@
       </li>
       <li class="products__item">
         <img
+          class="item__img"
           src="./images/limeseasalt.jpg"
           width="230"
           height="201"
@@ -34,6 +42,7 @@
       </li>
       <li class="products__item">
         <img
+          class="item__img"
           src="./images/pineapple.jpg"
           width="230"
           height="201"
@@ -45,6 +54,7 @@
       </li>
       <li class="products__item">
         <img
+          class="item__img"
           src="./images/classic.jpg"
           width="230"
           height="201"
@@ -55,13 +65,20 @@
         <p class="item__price">45 UAH</p>
       </li>
       <li class="products__item">
-        <img src="./images/honey.jpg" width="230" height="201" alt="Honey" />
+        <img
+          class="item__img"
+          src="./images/honey.jpg"
+          width="230"
+          height="201"
+          alt="Honey"
+        />
         <h3 class="item__name">HONEY</h3>
         <p class="item__type">Milk chocolate</p>
         <p class="item__price">50 UAH</p>
       </li>
       <li class="products__item">
         <img
+          class="item__img"
           src="./images/Roastedfruits.jpg"
           width="230"
           height="201"
@@ -73,6 +90,7 @@
       </li>
       <li class="products__item">
         <img
+          class="item__img"
           src="./images/classicwhite.jpg"
           width="230"
           height="201"
