--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -1,66 +1,61 @@
-.container {
-  text-align: center;
-}
 .products {
-  display: flex;
-  justify-content: center;
-  padding: 32px 20px;
-  margin-bottom: 72px;
-}
-.products-list {
-  display: flex;
-  overflow-x: scroll;
-  margin-bottom: 20px;
-  gap: 18px;
-  &::-webkit-scrollbar {
-    width: 20px;
+  &__title {
+    margin-bottom: 50px;
+  }
+  &__list {
+    display: flex;
+    overflow-x: scroll;
+    margin-bottom: 20px;
+    gap: 18px;
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    @media screen and (min-width: 768px) {
+      margin-bottom: 32px;
+    }
+  }
+  &__item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: $white;
-    display: none;
+    width: 335px;
+    border: 1px solid $black-o10;
+    border-radius: 15px;
+    padding: 32px 52px;
+
+    @media screen and (min-width: 768px) {
+      width: 270px;
+    }
   }
 }
-.title--margin {
-  margin-bottom: 32px;
-}
-.products__item {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: $white;
-  width: 335px;
-  border: 1px solid $black-o10;
-  border-radius: 15px;
-  padding: 32px 52px;
-  img {
+.item {
+  &__img {
     margin-bottom: 8px;
   }
-  @media screen and (min-width: 768px) {
-    width: 270px;
+  &__name {
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1.33;
+    letter-spacing: -0.02em;
+    text-transform: uppercase;
   }
-}
-.item__name {
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 1.3; /* 133.333% */
-  letter-spacing: -0.36px;
-  text-transform: uppercase;
-}
-.item__type {
-  margin-bottom: 18px;
-  font-size: 12px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.16; /* 116.667% */
-  letter-spacing: -0.24px;
-}
-.item__price {
-  font-style: normal;
-  line-height: normal;
-  background-color: $bg-main;
-  width: 115px;
-  border: 1px solid $black-o10;
-  border-radius: 100px;
-  padding: 8px 20px;
-  font-size: 14px;
-  font-weight: 600;
+  &__type {
+    margin-bottom: 18px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.17;
+    letter-spacing: -0.02em;
+  }
+  &__price {
+    text-align: center;
+    background-color: $bg-main;
+    width: 115px;
+    border: 1px solid $black-o10;
+    border-radius: 100px;
+    padding: 8px 20px;
+    font-size: 14px;
+    font-weight: 600;
+  }
 }
