UPDATE made section

--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -1,34 +1,54 @@
-<section>
-  <h3>HOW IT’S MADE?</h3>
-  <ul>
-    <li>
-      <img
-        src="./images/howitsmade.jpg"
-        width="600"
-        height="400"
-        alt="how it’s made"
-      />
-    </li>
-    <li>
-      <h3>
-        Try our chocolates today and discover the perfect balance of flavor
-      </h3>
-      <ol>
-        <li>
-          Heat the milk in a saucepan without bringing it to a boil. Add sugar
-          and cocoa powder.
+<section class="made-section">
+  <div class="container">
+    <h3 class="sellers__title made-tilte">
+      <span class="sellers__title--black">HOW IT’S</span> MADE?
+    </h3>
+    <div class="made__container">
+      <ul class="video-list list">
+        <li class="video-list__image">
+          <svg>
+            <use href="./images/symbol-defs.svg#icon-play"></use>
+          </svg>
         </li>
-        <li>At the same time, prepare a water bath. Melt the butter on it.</li>
-        <li>
-          "Mix" the milk mixture and already liquid butter. Mix thoroughly with
-          a silicone spatula so that the mass becomes uniform and silky.
+      </ul>
+      <ul class="made-list list">
+        <li class="made-subtitle">
+          <h3 class="">
+            Try our chocolates today and discover the perfect balance of flavor
+          </h3>
         </li>
-        <li>Heat the mixture over low heat, letting it barely boil.</li>
         <li>
-          Pour the chocolate into special containers (can be replaced with ice
-          molds). Allow to cool and harden.
+          <ul class="recipe-list">
+            <li class="recipe-list__item">
+              <p>
+                Heat the milk in a saucepan without bringing it to a boil. Add
+                sugar and cocoa powder.
+              </p>
+            </li>
+            <li class="recipe-list__item">
+              <p>
+                At the same time, prepare a water bath. Melt the butter on it.
+              </p>
+            </li>
+            <li class="recipe-list__item">
+              <p>
+                "Mix" the milk mixture and already liquid butter. Mix thoroughly
+                with a silicone spatula so that the mass becomes uniform and
+                silky.
+              </p>
+            </li>
+            <li class="recipe-list__item">
+              <p>Heat the mixture over low heat, letting it barely boil.</p>
+            </li>
+            <li class="recipe-list__item">
+              <p>
+                Pour the chocolate into special containers (can be replaced with
+                icemolds). Allow to cool and harden.
+              </p>
+            </li>
+          </ul>
         </li>
-      </ol>
-    </li>
-  </ul>
+      </ul>
+    </div>
+  </div>
 </section>
