--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,6 +11,7 @@
 @import './hero';
 @import './benefits';
 @import './sensation';
+@import './made';
 @import './products';
 @import './sellers';
 @import './reviews';
