Se hacen ajustes de estilos en varias secciones para corregir errores de diseño

--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -1,16 +1,16 @@
-<section class="sellers">
-  <div class="sellers__div1">
-    <h3 class="sellers__title">
-      TOP <span class="sellers__title--black">SELLERS</span>
+<section class="sellers section">
+  <div class="container">
+    <h3 class="section__title sellers__title">
+      <span class="section__title--accent">TOP </span>SELLERS
     </h3>
-    <ul class="list sellers__list">
+    <ul class="sellers__list list">
       <li class="sellers__item">
         <img
+          class="sellers__img"
           src="./images/sellers1.jpg"
           width="335"
           height="464"
-          alt="tarjeta sellers 1"
-          class="sellers__img"
+          alt="card sellers 1"
         />
         <p class="sellers__text text1">
           Crazy enough chocolate originates from a bean just like the coffee
@@ -20,33 +20,32 @@
       </li>
       <li class="sellers__item">
         <img
+          class="sellers__img"
           src="./images/sellers2.jpg"
           width="335"
           height="464"
-          alt="tarjeta sellers 3"
-          class="sellers__img"
+          alt="card sellers 2"
         />
       </li>
       <li class="sellers__item">
         <img
+          class="sellers__img img"
           src="./images/sellers3.jpg"
           width="335"
           height="464"
-          alt="tarjeta sellers 3"
-          class="sellers__img img"
+          alt="card sellers 3"
         />
       </li>
     </ul>
-  </div>
-
-  <div class="sellers__div2">
-    <p class="sellers__text text2">
-      Crazy enough chocolate originates from a bean just like the coffee bean
-      called Cacao. Cacao has been around for thousands of years and was first
-      discovered by the Native American tribe called the Mayans.
-    </p>
-    <div class="sellers__div-btn">
-      <button type="button" class="btn" data-modal-buy-open2>Buy now</button>
+    <div class="sellers__actions">
+      <p class="sellers__text text2">
+        Crazy enough chocolate originates from a bean just like the coffee bean
+        called Cacao. Cacao has been around for thousands of years and was first
+        discovered by the Native American tribe called the Mayans.
+      </p>
+      <button type="button" class="btn sellers__btn" data-modal-buy-open2>
+        Buy now
+      </button>
     </div>
   </div>
 </section>
