--- a/src/sass/_sensation.scss
+++ b/src/sass/_sensation.scss
@@ -72,7 +72,9 @@
     cursor: pointer;
   }
   &__img {
+    margin: 0 auto;
     @media screen and (min-width: 1200px) {
+      margin: 0;
       width: 206px;
       height: 160px;
     }
