UPDATE footer y subscribe section

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,50 +1,74 @@
-<div class="container">
-  <ul class="list">
+<div class="container footer-container">
+  <ul class="footer__items list">
     <li class="footer__text">
       <p class="chocolate__phrase">
         <span class="first__letter">Chocolate</span> a delicious cure for a bad
         day
       </p>
     </li>
-    <ul class="contact__dimention list">
-      <li class="contact__space">
-        <p>
-          Contact us
-          <li class="contact__svg">
-            <svg class="svg__instagram" width="24" height="24">
-              <use href="images/symbol-defs.svg#icon-instagram2" />
+    <li>
+      <ul class="contact__dimention list">
+        <li>
+          <ul class="contact-links list">
+            <li>
+              <p class="footer-link footer-link--no-hover">Contact us</p>
+            </li>
+            <li class="">
+              <a
+                class="footer-link footer-link--contact"
+                href="tel:+380684439426"
+                >+38 (06) 84439426</a
+              >
+            </li>
+            <li class="">
+              <a
+                class="footer-link footer-link--contact"
+                href="mailto:simplychoc@gmail.com"
+                >simplychoc@gmail.com</a
+              >
+            </li>
+          </ul>
+        </li>
+        <li class="contact__svg">
+          <a
+            href="#"
+            class="social__link social__link--wh-transparent"
+            rel="noopener noreffer"
+            target="_blank"
+          >
+            <svg class="social__logo" width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-instagram"></use>
             </svg>
-            <svg class="svg__twitter" width="24" height="24">
-              <use href="images/symbol-defs.svg#icon-Vector" />
+          </a>
+          <a
+            href="#"
+            class="social__link social__link--wh-transparent"
+            rel="noopener noreffer"
+            target="_blank"
+          >
+            <svg class="social__logo" width="24" height="24">
+              <use href="./images/symbol-defs.svg#icon-twitter"></use>
             </svg>
-          </li>
-        </p>
-      </li>
-      <li class="">
-        <a class="link__first" href="tel:+380684439426">+38 (06) 84439426</a>
-      </li>
-      <li class="">
-        <a class="link__second" href="mailto:simplychoc@gmail.com"
-          >simplychoc@gmail.com</a
-        >
-      </li>
-    </ul>
+          </a>
+        </li>
+      </ul>
+    </li>
   </ul>
   <ul class="menu list">
     <li>
-      <a class="menu__link" href="#">Home</a>
+      <a class="footer-link" href="#">Home</a>
     </li>
     <li>
-      <a class="menu__link" href="#">How it's made</a>
+      <a class="footer-link" href="#">How it's made</a>
     </li>
     <li>
-      <a class="menu__link" href="#">Our product</a>
+      <a class="footer-link" href="#">Our product</a>
     </li>
     <li>
-      <a class="menu__link" href="#">Top Sellers</a>
+      <a class="footer-link" href="#">Top Sellers</a>
     </li>
     <li>
-      <a class="menu__link" href="#">Chocolate is loved</a>
+      <a class="footer-link" href="#">Chocolate is loved</a>
     </li>
   </ul>
 </div>
