--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -7,6 +7,7 @@ $black: #111;
 $black-o10: #1111111a;
 $black-o70: #111111b3;
 $white: #fff;
+$white-o10: #ffffff1a;
 $white-o50: #ffffff80;
 $white-o70: #ffffffb3;
 $bg-black: #1e1823;
