--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -1,106 +1,92 @@
 .footer {
-  background-color: #1e1823;
-  color: #ffffff;
+  background-color: $bg-black;
+  color: $white;
 }
-
+.footer-container {
+  padding-top: 50px;
+}
+.footer__items {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 86px;
+  &::after {
+    content: '';
+    position: absolute;
+    width: 95%;
+    height: 2px;
+    background-color: $white-o10;
+  }
+  @media screen and (min-width: 375px) {
+    gap: 32px;
+    flex-wrap: wrap;
+    &::after {
+      top: 224px-32px;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    &::after {
+      top: 130px;
+    }
+  }
+}
 .footer__text {
+  width: 300px;
   font-size: 28px;
-  white-space: pre-line;
-  border-bottom: 1px solid #ffffff1a;
 }
 
 .first__letter {
-  color: #fd9222;
-}
-
-.chocolate_phrase {
-  margin-left: 10px;
-}
-
-.contact__space {
-  margin-bottom: 10px;
-  margin-right: 210px;
-}
-
-.link__first {
-  text-decoration: none;
-  color: #ffffff;
-  margin-right: 147px;
-}
-
-.link__second {
-  text-decoration: none;
-  color: #ffffff;
-  margin-right: 100px;
-}
-
-.link__block {
-  transform: translateY(80%);
-}
-
-.link__first:hover {
-  color: #fd9222;
-}
-
-.link__second:hover {
-  color: #fd9222;
+  color: $accent;
 }
 
 .contact__dimention {
-  text-align: right;
-  transform: translateY(-140%);
-}
-
-.contact__space {
-  margin-bottom: 30px;
-  margin-right: 210px;
-  transform: translateY(310%);
-}
-
-.contact__svg {
   display: flex;
-  justify-content: right;
-}
-
-.first__part {
-  text-align: right;
-  transform: translateY(-150%);
+  @media screen and (min-width: 375px) {
+    gap: 113px;
+  }
+  @media screen and (min-width: 768px) {
+    gap: 63px;
+  }
 }
 
 .menu {
-  padding-left: 30px;
-  transform: translateY(-480%);
+  color: $white;
+  display: flex;
+  padding-bottom: 50px;
+  @media screen and (min-width: 375px) {
+    gap: 18px;
+    flex-direction: column;
+  }
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    gap: 24px;
+  }
 }
 
-.menu__link {
+.footer-link {
   text-decoration: none;
-  color: #ffffff;
-  display: inline;
-  padding: 12px;
-  cursor: pointer;
+  color: $white;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.14; /* 114.286% */
+  letter-spacing: -0.28px;
+  &:hover {
+    color: $accent;
+  }
+  &--contact {
+    text-align: center;
+    font-weight: 400;
+    line-height: 1.3px; /* 128.571% */
+  }
+  &--no-hover {
+    margin-bottom: 16px;
+    &:hover {
+      color: $white;
+    }
+  }
 }
-
-.menu__link:hover {
-  color: #fd9222;
-}
-
-.svg__instagram {
-  fill: #ffffff;
-  cursor: pointer;
-  display: inline;
-}
-
-.svg__instagram:hover {
-  fill: #fd9222;
-}
-
-.svg__twitter {
-  fill: #ffffff;
-  cursor: pointer;
-  display: inline;
-  margin-left: 15px;
-}
-
-.svg__twitter:hover {
-  fill: #fd9222;
+.contact__svg {
+  display: flex;
+  gap: 18px;
 }
