--- a/src/sass/_subscribe.scss
+++ b/src/sass/_subscribe.scss
@@ -1,9 +1,17 @@
 .hero__background {
   background-image: linear-gradient(to bottom, #2f303a66, #2f303a66),
-    url(../images/footer.jpg);
-  background-size: cover;
+    url(../images/subscribe.jpg);
   background-position: center;
+  background-size: cover;
   background-repeat: no-repeat;
+  @media screen and (min-width: 768px) {
+    background-image: linear-gradient(to bottom, #2f303a66, #2f303a66),
+      url(../images/subscribe@2.jpg);
+  }
+  @media screen and (min-width: 1200px) {
+    background-image: linear-gradient(to bottom, #2f303a66, #2f303a66),
+      url(../images/subscribe@3.jpg);
+  }
 }
 
 .center {
@@ -13,12 +21,11 @@
   text-align: center;
   color: #ffffff;
   gap: 24px;
-  padding: 72px 368px;
-}
-.title__dimention {
-  width: 378px;
+  padding: 60px 20px;
 }
 .text__dimention {
-  text-align: center;
-  margin-bottom: 5px;
+  width: 326px;
+  @media screen and (min-width: 768px) {
+    width: 467px;
+  }
 }
