Se ajusta la sección made

--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -1,54 +1,65 @@
-<section class="made-section">
+<section class="made section">
   <div class="container">
-    <h3 class="sellers__title made-tilte">
-      <span class="sellers__title--black">HOW IT’S</span> MADE?
+    <h3 class="section__title made__tilte">
+      HOW IT’S <span class="section__title--accent">MADE?</span>
     </h3>
     <div class="made__container">
-      <ul class="video-list list">
-        <li class="video-list__image">
-          <svg>
-            <use href="./images/symbol-defs.svg#icon-play"></use>
-          </svg>
-        </li>
-      </ul>
-      <ul class="made-list list">
-        <li class="made-subtitle">
-          <h3 class="">
-            Try our chocolates today and discover the perfect balance of flavor
-          </h3>
-        </li>
-        <li>
-          <ul class="recipe-list">
-            <li class="recipe-list__item">
-              <p>
-                Heat the milk in a saucepan without bringing it to a boil. Add
-                sugar and cocoa powder.
-              </p>
-            </li>
-            <li class="recipe-list__item">
-              <p>
-                At the same time, prepare a water bath. Melt the butter on it.
-              </p>
-            </li>
-            <li class="recipe-list__item">
-              <p>
-                "Mix" the milk mixture and already liquid butter. Mix thoroughly
-                with a silicone spatula so that the mass becomes uniform and
-                silky.
-              </p>
-            </li>
-            <li class="recipe-list__item">
-              <p>Heat the mixture over low heat, letting it barely boil.</p>
-            </li>
-            <li class="recipe-list__item">
-              <p>
-                Pour the chocolate into special containers (can be replaced with
-                icemolds). Allow to cool and harden.
-              </p>
-            </li>
-          </ul>
-        </li>
-      </ul>
+      <div class="made__image">
+        <svg class="made__icon">
+          <use href="./images/symbol-defs.svg#icon-play"></use>
+        </svg>
+      </div>
+      <div class="made__instructions">
+        <h3 class="made__subtitle">
+          Try our chocolates today and discover the perfect balance of flavor
+        </h3>
+        <ul class="made__list list">
+          <li class="made__item">
+            <svg class="item__svg" width="8" height="8">
+              <use href="./images/symbol-defs.svg#icon-list"></use>
+            </svg>
+            <p class="made__text">
+              Heat the milk in a saucepan without bringing it to a boil. Add
+              sugar and cocoa powder.
+            </p>
+          </li>
+          <li class="made__item">
+            <svg class="item__svg" width="8" height="8">
+              <use href="./images/symbol-defs.svg#icon-list"></use>
+            </svg>
+            <p class="made__text">
+              At the same time, prepare a water bath. Melt the butter on it.
+            </p>
+          </li>
+          <li class="made__item">
+            <svg class="item__svg" width="8" height="8">
+              <use href="./images/symbol-defs.svg#icon-list"></use>
+            </svg>
+            <p class="made__text">
+              "Mix" the milk mixture and already liquid butter. Mix thoroughly
+              with a silicone spatula so that the mass becomes uniform and
+              silky.
+            </p>
+          </li>
+          <li class="made__item">
+            <svg class="item__svg" width="8" height="8">
+              <use href="./images/symbol-defs.svg#icon-list"></use>
+            </svg>
+            <p class="made__text">
+              Heat the mixture over low heat, letting it barely boil.
+            </p>
+          </li>
+          <li class="made__item">
+            <svg class="item__svg" width="8" height="8">
+              <use href="./images/symbol-defs.svg#icon-list"></use>
+            </svg>
+            <p class="made__text">
+              Pour the chocolate into special containers (can be replaced with
+              ice molds). Allow to cool and harden.
+            </p>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </section>
