--- a/src/sass/_made.scss
+++ b/src/sass/_made.scss
@@ -1,22 +1,30 @@
-.made-tilte {
-  margin-bottom: 32px;
-  @media screen and (min-width: 768px) {
-    margin-bottom: 50px;
+.made {
+  &__tilte {
+    margin-bottom: 32px;
+    @media screen and (min-width: 768px) {
+      margin-bottom: 50px;
+    }
   }
-}
-.video-list {
+  &__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex-direction: column;
+    @media screen and (min-width: 1200px) {
+      flex-direction: row;
+    }
+  }
   &__image {
-    text-align: center;
     position: relative;
-    margin: 32px 0px 20px 0px;
     width: 335px;
     height: 500px;
-    background-color: black;
-    background-image: url(../images/howitsmade.jpg);
-
     border-radius: 15px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-image: url(../images/howitsmade.jpg);
     @media screen and (min-width: 768px) {
-      margin: 32px;
       width: 614px;
       height: 400px;
       background-image: url(../images/howitsmade@2.jpg);
@@ -26,54 +34,68 @@
       height: 400px;
       background-image: url(../images/howitsmade@3.jpg);
     }
-    svg {
-      position: absolute;
-      width: 35px;
-      height: 35px;
-      top: 233px;
-      left: 150px;
-      @media screen and (min-width: 768px) {
-        width: 44px;
-        height: 44px;
-        top: 178px;
-        left: 285px;
-      }
+  }
+  &__icon {
+    position: absolute;
+    width: 35px;
+    height: 35px;
+    top: 233px;
+    left: 150px;
+    @media screen and (min-width: 768px) {
+      width: 44px;
+      height: 44px;
+      top: 178px;
+      left: 285px;
+    }
+    &:hover {
+      cursor: pointer;
     }
   }
-}
-.made-list {
-  padding: 20px 14px;
-  @media screen and (min-width: 768px) {
-    padding: 32px;
+  &__instructions {
+    width: 335px;
+    background-color: $white;
+    border-radius: 15px;
+    padding: 20px 14px;
+    @media screen and (min-width: 768px) {
+      width: 614px;
+      padding: 32px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 516px;
+    }
   }
-  @media screen and (min-width: 1200px) {
-    padding: 0;
+  &__subtitle {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.33;
+    margin-bottom: 20px;
+    @media screen and (min-width: 768px) {
+      width: 350px;
+      margin-bottom: 28px;
+    }
   }
-}
-.recipe-list {
-  text-align: start;
-  padding: 18px 16px;
-}
-.made-subtitle {
-  text-align: start;
-  font-style: normal;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 1.3; /* 133.333% */
-}
-.recipe-list__item {
-  list-style: outside;
-  font-style: normal;
-  margin-bottom: 20px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 1.3; /* 128.571% */
-  letter-spacing: -0.28px;
-}
-
-.made__container {
-  @media screen and (min-width: 1200px) {
+  &__list {
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    gap: 18px;
+    @media screen and (min-width: 1200px) {
+      gap: 24px;
+    }
+  }
+  &__item {
+    display: flex;
+    position: relative;
+    .item__svg {
+      position: absolute;
+      top: 5px;
+      margin-right: 8px;
+    }
+  }
+  &__text {
+    margin-left: 16px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1.29;
+    letter-spacing: -0.02em;
   }
 }
