--- a/src/partials/modal-buy.html
+++ b/src/partials/modal-buy.html
@@ -9,7 +9,7 @@
     </div>
     <div class="modal__main">
       <h3 class="modal__title modal__title--buy">
-        <span class="main__title">BUY </span>NOW!
+        <span class="main__title">BUY </span>NOW
       </h3>
       <ul class="list-products">
         <li class="product-card">
@@ -117,7 +117,7 @@
             id="comment"
             placeholder="Enter text"
           ></textarea>
-          <button type="submit" class="btn btn--modal-form">Send</button>
+          <button type="submit" class="btn btn--modal-form">Submit</button>
         </fieldset>
       </form>
     </div>
