--- a/src/sass/_buttons.scss
+++ b/src/sass/_buttons.scss
@@ -91,6 +91,7 @@
     position: absolute;
     padding: 17px 28px;
     left: 162px;
+    top: 0px;
     @media screen and (min-width: 768px) {
       position: static;
     }
