--- a/src/sass/_subscribe.scss
+++ b/src/sass/_subscribe.scss
@@ -23,6 +23,13 @@
   gap: 24px;
   padding: 60px 20px;
 }
+
+.title__dimention {
+  width: 291px;
+  @media screen and (min-width: 768px) {
+    width: 378px;
+  }
+}
 .text__dimention {
   width: 326px;
   @media screen and (min-width: 768px) {
