Se ajustan los links de salto a las secciones

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -13,14 +13,14 @@
             <li>
               <p class="footer-link footer-link--no-hover">Contact us</p>
             </li>
-            <li class="">
+            <li>
               <a
                 class="footer-link footer-link--contact"
                 href="tel:+380684439426"
                 >+38 (06) 84439426</a
               >
             </li>
-            <li class="">
+            <li>
               <a
                 class="footer-link footer-link--contact"
                 href="mailto:simplychoc@gmail.com"
@@ -56,19 +56,19 @@
   </ul>
   <ul class="menu list">
     <li>
-      <a class="footer-link" href="#">Home</a>
+      <a class="footer-link" href="#hero">Home</a>
     </li>
     <li>
-      <a class="footer-link" href="#">How it's made</a>
+      <a class="footer-link" href="#made">How it's made</a>
     </li>
     <li>
-      <a class="footer-link" href="#">Our product</a>
+      <a class="footer-link" href="#product">Our product</a>
     </li>
     <li>
-      <a class="footer-link" href="#">Top Sellers</a>
+      <a class="footer-link" href="#sellers">Top Sellers</a>
     </li>
     <li>
-      <a class="footer-link" href="#">Chocolate is loved</a>
+      <a class="footer-link" href="#reviews">Chocolate is loved</a>
     </li>
   </ul>
 </div>
