--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,27 +11,25 @@
 
     <ul class="nav-bar__menu list">
       <li class="menu__item">
-        <a href="#" class="menul__link" rel="noopener noreffer" target="_blank"
-          >Home</a
-        >
+        <a href="#hero" class="menul__link" rel="noopener noreffer">Home</a>
       </li>
       <li class="menu__item">
-        <a href="#" class="menul__link" rel="noopener noreffer" target="_blank"
+        <a href="#made" class="menul__link" rel="noopener noreffer"
           >How it's made</a
         >
       </li>
       <li class="menu__item">
-        <a href="#" class="menul__link" rel="noopener noreffer" target="_blank"
+        <a href="#products" class="menul__link" rel="noopener noreffer"
           >Our products</a
         >
       </li>
       <li class="menu__item">
-        <a href="#" class="menul__link" rel="noopener noreffer" target="_blank"
+        <a href="#sellers" class="menul__link" rel="noopener noreffer"
           >Top Sellers</a
         >
       </li>
       <li class="menu__item">
-        <a href="#" class="menul__link" rel="noopener noreffer" target="_blank"
+        <a href="#reviews" class="menul__link" rel="noopener noreffer"
           >Chocolate is loved</a
         >
       </li>
