--- a/src/partials/made.html
+++ b/src/partials/made.html
@@ -1,4 +1,4 @@
-<section class="made section">
+<section id="made" class="made section">
   <div class="container">
     <h3 class="section__title made__tilte">
       HOW IT’S <span class="section__title--accent">MADE?</span>
