--- a/src/partials/sellers.html
+++ b/src/partials/sellers.html
@@ -1,4 +1,4 @@
-<section class="sellers section">
+<section id="sellers" class="sellers section">
   <div class="container">
     <h3 class="section__title sellers__title">
       <span class="section__title--accent">TOP </span>SELLERS
