--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section id="hero" class="hero">
   <div class="container">
     <h1 class="hero__title">
       Treat yourself or a loved one to our finest ingredients for a moment of
