--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,4 +1,4 @@
-<section class="products section">
+<section id="products" class="products section">
   <div class="container">
     <h3 class="section__title products__title">
       OUR <span class="section__title--accent">PRODUCTS</span>
