--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews section">
+<section id="reviews" class="reviews section">
   <div class="container">
     <h3 class="section__title">
       <span class="section__title--accent">CHOCOLATE</span> IS LOVED
