--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -7,6 +7,7 @@ body {
   font-family: $main-font-family, sans-serif;
   color: $black;
   background-color: $bg-main;
+  scroll-behavior: smooth;
 }
 
 img {
